--- a/app/views/framework_views/parts/framework_required_includes.scala.html
+++ b/app/views/framework_views/parts/framework_required_includes.scala.html
@@ -52,8 +52,8 @@
 <script type="text/javascript" src="@(assetsRootLocation)framework/lib/bootstrap-tour/js/bootstrap-tour.min.js"></script>
 <link href="@(assetsRootLocation)framework/lib/bootstrap-tour/css/bootstrap-tour.min.css" rel="stylesheet">
 
-<script src="@framework.utils.AssetsProvider.local(assetsRootLocation + "framework/javascripts/main.min.js")"></script>
-<link href="@framework.utils.AssetsProvider.local(assetsRootLocation + "framework/stylesheets/main.css")" type="text/css" rel="stylesheet">
+<script src="@framework.utils.AssetsProvider.local(assetsRootLocation, "framework/javascripts/main.min.js")"></script>
+<link href="@framework.utils.AssetsProvider.local(assetsRootLocation, "framework/stylesheets/main.css")" type="text/css" rel="stylesheet">
 
 <script>
     var _maf_translations = {
