Adaptation to dependency injection. Controllers are not static anymore and Global onStart/onStop is removed.

--- a/app/views/framework_views/parts/formats/display_list_of_values.scala.html
+++ b/app/views/framework_views/parts/formats/display_list_of_values.scala.html
@@ -21,7 +21,7 @@
     @for(value <- listOfValues){
         @if(value!=null){
             <li>
-                @Html(framework.services.configuration.ImplementationDefineObjectServiceFactory.getInstance().renderObject(value))
+                @Html(framework.services.ServiceStaticAccessor.getImplementationDefinedObjectService().renderObject(value))
             </li>
         }
     }
