--- a/app/views/framework_views/parts/kpi/display_kpi_cell.scala.html
+++ b/app/views/framework_views/parts/kpi/display_kpi_cell.scala.html
@@ -18,10 +18,10 @@
 @(uid: String, objectId: Long)
 
 @import framework_views.parts
-@import framework.services.ServiceStaticAccessor
 @import framework.services.kpi.IKpiService
+@import framework_views.parts.commons._
 
-@defining(ServiceStaticAccessor.getKpiService().getKpiRender(uid, objectId)) { kpiRender =>
+@defining(_kpiService.getKpiRender(uid, objectId)) { kpiRender =>
 
     @if(kpiRender != null) {
         @if(kpiRender.getLink != null) {
