Fix html content in mails

--- a/app/views/framework_views/parts/mail/notification_html.scala.html
+++ b/app/views/framework_views/parts/mail/notification_html.scala.html
@@ -133,7 +133,7 @@
                                                             <tbody>
                                                                 <tr>
                                                                     <td style="font-family: Helvetica, arial, sans-serif; font-size: 14px; color: #282828; text-align:left; line-height: 24px;">
-                                                                        @messageContent
+                                                                        @Html(messageContent)
                                                                     </td>
                                                                 </tr>
                                                                 @if(link != null) {
