Remove duplicate "class" attributes in a tag (refs #TAF-74)

--- a/app/views/framework_views/parts/menubars/topmenubar.scala.html
+++ b/app/views/framework_views/parts/menubars/topmenubar.scala.html
@@ -72,7 +72,7 @@
                             @if(menuItem.restrict()){
                                 @if(menuItem.hasSubMenuItems()){
                                     <li class="dropdown" id="topmenubar-item-@index">
-                                      <a href="#" class="text-center" class="dropdown-toggle" style="padding-bottom: 5px; padding-top: 6px;" data-toggle="dropdown">
+                                      <a href="#" class="text-center dropdown-toggle" style="padding-bottom: 5px; padding-top: 6px;" data-toggle="dropdown">
                                         <i class="@menuItem.getCssIcon" style="font-size:1.3em;"></i>&nbsp;<b class="caret"></b><br/><small>@parts.Msg(menuItem.getLabel())</small>
                                       </a>
                                       <ul class="dropdown-menu">
