Creating multiple scala import directives for javascript and CSS

--- a/app/views/framework_views/parts/framework_angular_dev_includes.scala.html
+++ b/app/views/framework_views/parts/framework_angular_dev_includes.scala.html
@@ -15,10 +15,8 @@
  * You should have received a copy of the GNU General Public License along with
  * this program. If not, see <http://www.gnu.org/licenses/>.
  *@
- 
 @(assetsRootLocation: String)
-<script type="text/javascript" src="@(assetsRootLocation)framework/lib/jquery.form.js"></script>
-@*******************************************************
- Sub view to include the needed resources to support
- enable ajax form submit
- ******************************************************@ 
+<script src="@(assetsRootLocation)framework/lib/angular/angular.js"></script>
+<script src="@(assetsRootLocation)framework/lib/angular/angular-animate.js"></script>
+<script src="@(assetsRootLocation)framework/lib/angular/angular-route.js"></script>
+<script src="@(assetsRootLocation)framework/lib/angular/angular-resource.js"></script>
