--- a/app/views/framework_views/parts/framework_angular_dev_includes.scala.html
+++ b/app/views/framework_views/parts/framework_angular_dev_includes.scala.html
@@ -20,3 +20,4 @@
 <script src="@(assetsRootLocation)framework/lib/angular/angular-animate.js"></script>
 <script src="@(assetsRootLocation)framework/lib/angular/angular-route.js"></script>
 <script src="@(assetsRootLocation)framework/lib/angular/angular-resource.js"></script>
+<script src="@(assetsRootLocation)framework/lib/angular-ui/ui-bootstrap-tpls-0.13.4.js"></script>
