--- a/app/views/framework_views/parts/framework_angular_includes.scala.html
+++ b/app/views/framework_views/parts/framework_angular_includes.scala.html
@@ -20,3 +20,4 @@
 <script src="@(assetsRootLocation)framework/lib/angular/angular-animate.min.js"></script>
 <script src="@(assetsRootLocation)framework/lib/angular/angular-route.min.js"></script>
 <script src="@(assetsRootLocation)framework/lib/angular/angular-resource.min.js"></script>
+<script src="@(assetsRootLocation)framework/lib/angular-ui/ui-bootstrap-tpls-0.13.4.min.js"></script>
