Restructuring javascript imports

--- a/app/views/framework_views/parts/framework_bootstrap_css_includes.scala.html
+++ b/app/views/framework_views/parts/framework_bootstrap_css_includes.scala.html
@@ -17,3 +17,4 @@
  *@
 @(assetsRootLocation: String)
 <link href="@(assetsRootLocation)framework/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="@(assetsRootLocation)framework/lib/bootstrap-jasny/css/jasny-bootstrap.min.css" rel="stylesheet">
